--- a/pruebaIOS/pruebaIOS/productsList.storyboard
+++ b/pruebaIOS/pruebaIOS/productsList.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller Products-->
+        <!--Productos-->
         <scene sceneID="mU6-Fh-9uv">
             <objects>
                 <viewController id="fqJ-9D-6cS" customClass="viewControllerProducts" customModule="pruebaIOS" sceneMemberID="viewController">
@@ -42,7 +42,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3Fj-mX-HhX"/>
                     </view>
-                    <navigationItem key="navigationItem" id="BTw-pe-On2"/>
+                    <navigationItem key="navigationItem" title="Productos" leftItemsSupplementBackButton="YES" id="BTw-pe-On2"/>
                     <connections>
                         <outlet property="tableList" destination="mzt-Bg-mDz" id="siP-Yb-XT8"/>
                     </connections>
